add settings in HTML

--- a/signIn.html
+++ b/signIn.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <nav class="menu">
-    <a href="../index.html" class="menu__logo">
+    <a href="./index.html" class="menu__logo">
       <img class="menu__logo-img" src="./assets/images/hbo-logo.svg" alt="Logotipo da Marca">
     </a>
     <div class="menu__item">
@@ -25,7 +25,7 @@
     <form class="login container">
       <h1 class="login__title">Entrar</h1>
       <label class="login__label"> Você tem uma conta da HBO Max? </label>
-      
+
       <input class="login__field" 
       type="email" 
       name="email" 
