--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="./assets/images/hbo.png" 
     sizes="35x35"/>
-  <link rel="stylesheet" href="/assets/css/global.css">
-  <link rel="stylesheet" href="/assets/css/index.css">
+  <link rel="stylesheet" href="./assets/css/global.css">
+  <link rel="stylesheet" href="./assets/css/index.css">
+  <link rel="stylesheet" href="./assets/css/signIn.css">
   <title>HBO MAX</title>
 </head>
 
 <body>
   <nav class="menu">
-    <a href="index.html" class="menu__logo">
+    <a href="./index.html" class="menu__logo">
       <img class="menu__logo-img" src="assets/images/hbo-logo.svg" alt="Logotipo da Marca">
     </a>
     <div class="menu__item">
@@ -27,11 +28,11 @@
   <header class="header">
     <div class="header__content">
       <div class="header__channels">
-        <img src="/assets/images/hbo.png" alt="HBO" class="header__channel">
-        <img src="/assets/images/dc.png" alt="DC" class="header__channel">
-        <img src="/assets/images/wb.png" alt=" Warner Bros" class="header__channel">
-        <img src="/assets/images/cartoon-network_neutral.png" alt="Cartoon Network" class="header__channel">
-        <img src="/assets/images/max_originals.png" alt="Max Originals" class="header__channel">
+        <img src="./assets/images/hbo.png" alt="HBO" class="header__channel">
+        <img src="./assets/images/dc.png" alt="DC" class="header__channel">
+        <img src="./assets/images/wb.png" alt=" Warner Bros" class="header__channel">
+        <img src="./assets/images/cartoon-network_neutral.png" alt="Cartoon Network" class="header__channel">
+        <img src="./assets/images/max_originals.png" alt="Max Originals" class="header__channel">
       </div>
       <h1 class="header__title">
         <span class="header__title--light">Curta as melhores histórias</span>
@@ -137,42 +138,42 @@
         <div class="contents__card">
           <img
             class="contents__image"
-            src="assets/images/hbo-default_0.webp"
+            src="./assets/images/hbo-default_0.webp"
             alt="HBO"
           />
         </div>
         <div class="contents__card">
           <img
             class="contents__image"
-            src="assets/images/MAX-Default.webp"
+            src="./assets/images/MAX-Default.webp"
             alt="Max Originals"
           />
         </div>
         <div class="contents__card">
           <img
             class="contents__image"
-            src="assets/images/DC_Default.webp"
+            src="./assets/images/DC_Default.webp"
             alt="DC"
           />
         </div>
         <div class="contents__card">
           <img
             class="contents__image"
-            src="assets/images/WB-Default.webp"
+            src="./assets/images/WB-Default.webp"
             alt="Warner Bross"
           />
         </div>
         <div class="contents__card">
           <img
             class="contents__image"
-            src="assets/images/CN-Default.webp"
+            src="./assets/images/CN-Default.webp"
             alt="Cartoon Network"
           />
         </div>
         <div class="contents__card">
           <img
             class="contents__image"
-            src="assets/images/UCL-Default.webp"
+            src="./assets/images/UCL-Default.webp"
             alt="UEFA Champions League"
           />
         </div>
@@ -220,7 +221,7 @@
         href="https://www.youtube.com/c/hbomaxbr"
         class="footer__social-link"
       >
-        <img src="assets/images/youtube_0.png" alt="Youtube" />
+        <img src="./assets/images/youtube_0.png" alt="Youtube" />
       </a>
     </div>
     <p class="creater">Create  by <span>Luiz Fernando C Souza</span></p>
