settings index.css

--- a/signIn.html
+++ b/signIn.html
@@ -16,7 +16,7 @@
     </a>
     <div class="menu__item">
       <a href="signIn.html" class="menu__item-link">ENTRAR</a>
-      <a href="#subscription" class="menu__item menu__item--button button">
+      <a href="./index.html#subscription" class="menu__item menu__item--button button">
         ASSINE AGORA
       </a>
     </div>
